# playground_ubuntu_ppa_hello_world

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
.github/workflows/: publish.yaml  tests.yaml
.github/workfows/: publish.yaml
apps/hello_world/: CMakeLists.txt
apps/hello_world_example/: CMakeLists.txt  main.cc
cmake/: HelloWorldConfig.cmake  cmake_install.cmake  helper.cmake
debian/: .gitignore  changelog  control  copyright  files  rules
examples/use_lib_as_local_target_example/: CMakeLists.txt
examples/use_lib_as_system_lib_example/: CMakeLists.txt  build_in_container.sh  run_container.sh
libs/: CMakeLists.txt
libs/hello_world/: CMakeLists.txt
libs/hello_world/core/: CMakeLists.txt  hello_world.cc  hello_world.h  hello_world_fmt.cc  hello_world_fmt.h
unit_tests/: CMakeLists.txt  example_class_test.cc  hello_world_test.cc
